we have added the code changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-   
+   <head>
+   this is when i craeted a branch called Duplicate Master and made changes to code.
+   </head>
     <body>
         <h1>
             DownloadJS demo page
